--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             const outputElement = document.getElementById("output");
             document.getElementById("startBtn").disabled = true;
             document.getElementById("stopBtn").disabled = false;
-            outputElement.innerHTML = "Starting nowPlaying monitor. Checking every 10 seconds...\nChecking the rock info from Rova , May need to be logged into rova.\nDelay from Terrestrial Radio to Rova seems to be 55seconds\nStatus:Queued is the next song to play.\nCreated by C.Crabb";
+            outputElement.innerHTML = "Starting nowPlaying monitor. Checking every 10 seconds...\nChecking the rock info from Rova , May need to be logged into rova.\nDelay from Terrestrial Radio to Rova seems to be 55seconds\nStatus:Queued is the next song to play.\nCreated byc Zer0nZ";
             monitorNowPlaying(); // Run immediately
             intervalId = setInterval(monitorNowPlaying, 10000);
         }
